--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
      
     <!-- Список вкладок -->
         <ul id="table">
-  		<li><a href="home.html">Главная страница</a></li>
+  		<li><a href="index.html">Главная страница</a></li>
   		<li><a href="News.html">Новости</a></li>
   		<li class="current"><a href="#">О нас</a></li>
   		<li><a href="https://vk.com/club160910486">Группа VK</a></li>
